--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="//code.jivosite.com/widget/Cx2rEfT3I4" async></script>
+
   </body>
 </html>
