Added: paypal api

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AZCTxuUYrbNU_9euDxRUZfpyJGOmIfVZ6PBJxjMwFiNZU2Zlc3J25w6pFyf7P23IR6C9lfwgjF992EGl&currency=MX"></script>
     <script src="//code.jivosite.com/widget/Cx2rEfT3I4" async></script>
 
   </body>
